Fix URL deprecation warning and remove unused deliveryClaimer field